kustomize/base/05-jupyter-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterhub-hub
  namespace: odc-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hub
  template:
    metadata:
      labels:
        component: hub
    spec:
      serviceAccountName: jupyterhub-hub-sa
      containers:
        - name: hub
          image: jupyterhub/k8s-hub:3.3.7
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/etc/jupyterhub/jupyterhub_config.py
              subPath: jupyterhub_config.py
      volumes:
        - name: config-volume
          configMap:
            name: jupyterhub-config
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-hub-svc
  namespace: odc-system
spec:
  selector:
    component: hub
  ports:
    - port: 8081
      targetPort: 8081
