kustomize/base/05-jupyter.yaml
# 2. Động cơ chạy Jupyter Lab
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: odc-system
spec:
  replicas: 1 # Jupyter mặc định chỉ chạy 1 Pod
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: aub2205926/my-custom-jupyter:1.0 # Trỏ đúng tên image bạn vừa build
          imagePullPolicy: IfNotPresent # Bắt K8s dùng image cục bộ
          # Tách command và các tham số ra cho đúng chuẩn K8s
          command: ["jupyter", "lab"]
          args:
            - "--ip=0.0.0.0"
            - "--port=8888"
            - "--no-browser"
            - "--allow-root"
            - "--NotebookApp.token=$(JUPYTER_TOKEN)"
          ports:
            - containerPort: 8888
          volumeMounts:
            # Mount toàn bộ không gian làm việc vào ổ cứng vĩnh cửu
            - name: workspace
              mountPath: /home/jovyan/work
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: jupyter-workspace-pvc

---
# 3. Service nội bộ cho Jupyter
apiVersion: v1
kind: Service
metadata:
  name: jupyter-svc
  namespace: odc-system
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - port: 8888
      targetPort: 8888
