kustomize/base/08-odc-explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odc-explorer
  namespace: odc-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odc-explorer
  template:
    metadata:
      labels:
        app: odc-explorer
    spec:
      containers:
        - name: explorer
          image: opendatacube/explorer:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: odc-explorer-svc
  namespace: odc-system
spec:
  selector:
    app: odc-explorer
  ports:
    - name: web
      port: 8080
      targetPort: 8080
